<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/flipHOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/flipH" />

    <item
        android:id="@+id/flipVOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/flipV" />
    <item
        android:id="@+id/rotationRightOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rotationRight" />
    <item
        android:id="@+id/rotationLeftOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rotationLeft" />
</menu>