<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/reverseColorsOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/reverseColors" />
    <item
        android:id="@+id/blackWhiteColorsOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/blackWhiteColors" />
    <item
        android:id="@+id/blackWhiteColors2Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/blackWhiteColors2" />
    <item
        android:id="@+id/blackWhiteColors3Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/blackWhiteColors3" />
</menu>